[gd_scene load_steps=8 format=3 uid="uid://7kyoatvdw6uv"]

[ext_resource type="Script" uid="uid://fh5kphppvcl6" path="res://start.gd" id="1_1n0d2"]
[ext_resource type="Texture2D" uid="uid://csh0txe6je5y4" path="res://bg.png" id="1_qn1rc"]

[sub_resource type="FontVariation" id="FontVariation_ig7tw"]
variation_embolden = 1.0

[sub_resource type="LabelSettings" id="LabelSettings_0xm2m"]
font = SubResource("FontVariation_ig7tw")
font_size = 18
font_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ots34"]
bg_color = Color(0.180392, 0.8, 0.443137, 1)
border_width_bottom = 4
border_color = Color(0.156863, 0.745098, 0.407843, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qn1rc"]
bg_color = Color(0.180392, 0.8, 0.443137, 1)
border_width_bottom = 3
border_color = Color(0.156863, 0.745098, 0.407843, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1n0d2"]
bg_color = Color(0.745098, 0.843137, 0.843137, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Start" type="CanvasLayer"]
script = ExtResource("1_1n0d2")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.721569, 0.721569, 1)

[node name="TextureRect2" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 8
texture = ExtResource("1_qn1rc")
expand_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(300, 0)
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -176.0
offset_top = 58.0
offset_right = 175.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Wast.io"
label_settings = SubResource("LabelSettings_0xm2m")
horizontal_alignment = 1

[node name="LineEdit" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter your name here"
alignment = 1

[node name="Play" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_ots34")
text = "Jouer en solo"

[node name="HostButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_qn1rc")
text = "Créer un serveur"

[node name="JoinButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_qn1rc")
text = "Rejoindre un serveur"

[node name="Panel" type="Panel" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 188.485)
layout_mode = 2
size_flags_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1n0d2")

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -12.0
offset_bottom = 12.235
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
bbcode_enabled = true
text = "[b]Gameplay[/b]

[ul] Vous êtes peut-être un déchet, mais vous êtes éco-responsable ![/ul]
[ul] Les humains vous ont jeté à la mer.[/ul]
[ul] Ne contaminez pas les poissons ![/ul]
[ul] Le dernier déchet gagne la partie ![/ul]"
fit_content = true

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/Play" to="VBoxContainer/Play" method="_on_pressed"]
